[metadata]
name = quakesrrtdisplay-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = A simple realtime display for QUAK/ESR data in a specific experimental setup
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/quakesrrtdisplay
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paho-mqtt >= 1.6.1
    matplotlib >= 3.3.4
    PySimpleGUI >= 4.60.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    quakesrdisplay = esrrtdisplay01.esrrtdisplay01:main
